packages/fxa-content-server/app/styles/modules/_settings.scss
// this needs to be overridden,
// or done in a way that doesn't kill these everywhere
body.settings #fox-logo,
body.settings #static-footer,
body.settings .sign-in {
  display: none;
}

body.settings .loading {
  position: relative;
  top: 150px;
}

body.settings #main-content {
  background: none;
  border: 0;
  box-shadow: none;
}

body.settings #main-content.panel,
body.settings #main-content.card {
  visibility: hidden;
}

body.settings #stage .settings {
  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: space-between;
  min-height: 100vh;
}

#fxa-settings {
  flex: 1;

  @include respond-to('big') {
    padding: 0 32px;
  }

  @include respond-to('small') {
    padding: 0;
  }
}

// settings header controls
#fxa-settings-header-wrapper {
  align-items: center;
  display: flex;
  width: 100%;

  @include respond-to('big') {
    height: 96px;
  }

  @include respond-to('small') {
    height: 64px;
  }

  #fxa-manage-account {
    background-image: image-url('firefox-logo.svg');
    background-repeat: no-repeat;
    margin: 0;

    @include respond-to('big') {
      background-size: 36px auto;
      line-height: 63px;

      html[dir='ltr'] & {
        background-position: left 11px;
        padding-left: 48px;
      }

      html[dir='rtl'] & {
        background-position: right 11px;
        padding-right: 48px;
      }
    }

    @include respond-to('small') {
      background-size: 32px auto;
      height: 48px;
      line-height: 50px;

      & .fxa-account-title {
        display: none;
      }

      html[dir='ltr'] & {
        background-position: left 8px;
        padding-left: 36px;
      }

      html[dir='rtl'] & {
        background-position: right 8px;
        padding-right: 36px;
      }
    }
  }

  .settings-button {
    @include respond-to('big') {
      width: 128px;
    }

    @include respond-to('small') {
      width: 96px;
    }
  }

  .settings-success-wrapper {
    left: 0;
    margin: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 2;
  }

  .settings-success {
    margin: 0 auto;
    top: 0;

    @include respond-to('small') {
      width: 100%;
    }
  }
}


// settings buttons
.settings-button {
  border-radius: $button-border-radius-settings;
  font-size: $button-font-size-settings;
  font-weight: $button-font-weight-settings;
  white-space: nowrap;

 @include respond-to('big') {
    height: $button-height-settings;
  }

  @include respond-to('small') {
    height: $button-height-settings-small;
  }

  .button-row & {
    @extend .settings-button;
    margin: 0;
    padding: 0;

    @include respond-to('big') {
      height: 48px;
      width: 48%;
    }

    @include respond-to('small') {
      height: 40px;
      width: 48%;
    }

    &:last-child {

      html[dir='ltr'] & {
        float: right;

        &.unpaired {
          float: none;
        }
      }

      html[dir='rtl'] & {
        float: left;

        &.unpaired {
          float: none;
        }
      }

      &:not(.clients-done) {
        html[dir] .clients & {
          @include respond-to('small') {
            float: none;
            margin: 10px 0;
          }
        }
      }
    }
  }

  &.settings-unit-toggle,
  &.settings-unit-loading {
    flex: 1 1 128px;
  }

  &.unpaired {
    width: 100%;
  }
}

// area above white box with avatar content
#fxa-settings-profile-header-wrapper {
  align-items: center;
  display: flex;
  flex-direction: row;

  @include respond-to('big') {
    padding: 0 32px;
  }

  @include respond-to('small') {
    padding: 0 8px;
  }
}

#fxa-settings-profile-header {
  margin: 0 16px;
  overflow: hidden;
  text-align: left;
  white-space: nowrap;

  .card-header,
  .card-subheader {
    overflow: hidden;
    text-overflow: ellipsis;
    text-wrap: nowrap;
    white-space: nowrap;
  }

  .card-header {
    font-size: 20px;
    line-height: 24px;
    margin-bottom: 0;
  }

  .card-subheader {
    font-size: 14px;
    line-height: 24px;
    margin-bottom: 0;
  }
}

.settings-child-view:last-child:not(.modal) {
  padding-bottom: 1px;
}

.settings-unit {
  border-top: 1px solid $settings-section-border;
}

.settings-unit-stub {
  align-items: center;
  display: flex;
  height: 72px;
  padding: 0 16px;

  .settings-unit-summary {
    margin: 0;
    width: 100%;


    @include respond-to('big') {

      html[dir='ltr'] & {
        margin-right: 10px;
      }

      html[dir='rtl'] & {
        margin-left: 10px;
      }
    }

    @include respond-to('small') {

      html[dir='ltr'] & {
        margin-right: 1%;
      }

      html[dir='rtl'] & {
        margin-left: 1%;
      }
    }
  }

  .settings-unit-title {
    color: $text-color;
    font-size: $base-font + 2;
    font-weight: 400;
    margin: 0;
  }

  .settings-unit-subtitle {
    color: $faint-text-color;
    font-size: $small-font;
    font-weight: normal;
    line-height: 16px;
    margin: 5px 0 0 0;
  }

  .settings-unit-title,
  .settings-unit-subtitle {
    text-overflow: ellipsis;
    text-wrap: nowrap;
    white-space: nowrap;
  }

  .settings-unit-title:only-child {
    line-height: 35px;
  }
}

.settings-unit-details {
  clear: both;
  display: none;
  padding: 0 16px;

  p {
    clear: both;
    color: $faint-text-color;
    margin: 6px 0 24px;
  }
}

.open .settings-unit-details {
  display: block;
}

.open .settings-unit-toggle,
.settings-button.settings-unit-loading {
  display: none;
}

.blocker {
  // Firefox 49 has an issue with z-index stacking
  // Update z-index of the jquery modal, see issue #4257
  z-index: 6;
}

section.modal-panel {
  .button-row:not(.save-options) {
    margin-bottom: 0;

    html[dir='ltr'] & {
      text-align: left;

      .input-row {
        text-align: left;
      }
    }

    html[dir='rtl'] & {
      text-align: right;
    }

      .input-row {
        text-align: right;
      }
  }

}

.client-list {
  padding: 0;
}
/* ... */

